fix contact for alignment

--- a/frontend/src/sections/contact/contact.module.css
+++ b/frontend/src/sections/contact/contact.module.css
@@ -66,7 +66,7 @@
 
 .contactFormCol {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   padding-bottom: 4rem;
 }
